--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "paths": { "@/*": ["src/*"] }
+    "paths": { "@*": ["src/*"] }
   }
 }
