--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:root@localhost:5432/steamline_v1_db?schema=public"
+
+JWT_ACCESS_SECRET="qmbcaopv191cnv9"
+JWT_REFRESH_SECRET="fd6amsdi923u9d"
