--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
+    "nestjs-pino": "^3.5.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pino-http": "^9.0.0",
+    "pino-pretty": "^10.3.1",
     "prisma": "^5.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
